--- a/static/css/sidebar-icons.css
+++ b/static/css/sidebar-icons.css
@@ -68,4 +68,9 @@
 
 .nav-icon-backups {
   background-image: url("data:image/svg+xml;charset=utf-8,%3Csvg width='16' height='16' viewBox='0 0 24 24' fill='none' stroke='%23ffffff' stroke-width='2' stroke-linecap='round' stroke-linejoin='round' xmlns='http://www.w3.org/2000/svg'%3E%3Ccircle cx='12' cy='13' r='8'%3E%3C/circle%3E%3Cpath d='M5 7a1 1 0 0 1 1-1h4l1-2h2l1 2h4a1 1 0 0 1 1 1v2.5'%3E%3C/path%3E%3Cpath d='M12 17.5V10l-2 2'%3E%3C/path%3E%3Cpath d='m12 10 2 2'%3E%3C/path%3E%3C/svg%3E");
+}
+
+.nav-icon-github {
+  background-image: url("data:image/svg+xml;charset=utf-8,%3Csvg width='20' height='20' viewBox='0 0 24 24' fill='none' stroke='%23ffffff' stroke-width='2' stroke-linecap='round' stroke-linejoin='round' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M15 22v-4a4.8 4.8 0 0 0-1-3.5c3 0 6-2 6-5.5.08-1.25-.27-2.48-1-3.5.28-1.15.28-2.35 0-3.5 0 0-1 0-3 1.5-2.64-.5-5.36-.5-8 0C6 2 5 2 5 2c-.3 1.15-.3 2.35 0 3.5A5.403 5.403 0 0 0 4 9c0 3.5 3 5.5 6 5.5-.39.49-.68 1.05-.85 1.65-.17.6-.22 1.23-.15 1.85v4'%3E%3C/path%3E%3Cpath d='M9 18c-4.51 2-5-2-7-2'%3E%3C/path%3E%3C/svg%3E");
+  filter: brightness(0) invert(1);
 } 
