--- a/templates/sidebar.html
+++ b/templates/sidebar.html
@@ -5,10 +5,6 @@
 <div class="sidebar">
   <div class="sidebar-header">
     <h1 class="sidebar-title">🎵 YouTube Player</h1>
-    <div class="server-info">
-      PID: <span id="server-pid">{{ server_info.pid if server_info else 'N/A' }}</span> | Started: <span id="server-start-time">{{ server_info.start_time if server_info else 'N/A' }}</span><br>
-      Current: <span id="server-current-time">{{ server_info.current_time if server_info else 'N/A' }}</span> | Uptime: <span id="server-uptime">{{ server_info.uptime if server_info else 'N/A' }}</span>
-    </div>
   </div>
   
   <nav>
@@ -101,6 +97,23 @@
       </li>
     </ul>
   </nav>
+  
+  <div class="server-info">
+    <div class="server-info-row">
+      PID: <span id="server-pid">{{ server_info.pid if server_info else 'N/A' }}</span> | Uptime: <span id="server-uptime">{{ server_info.uptime if server_info else 'N/A' }}</span>
+    </div>
+    <div class="server-info-row">
+      Started: <span id="server-start-time">{{ server_info.start_time if server_info else 'N/A' }}</span>
+    </div>
+    <div class="server-info-row">
+      Current: <span id="server-current-time">{{ server_info.current_time if server_info else 'N/A' }}</span>
+    </div>
+    <div class="server-info-row">
+      <a href="https://github.com/elimS2" target="_blank" class="github-link">
+        <span class="nav-icon nav-icon-github"></span>GitHub: elimS2
+      </a>
+    </div>
+  </div>
 </div>
 
 <!-- Dropdown Menu JavaScript -->
